<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBoxPreference
            android:defaultValue="@string/checkbox_default"
            android:key="@string/checkbox_key"
            android:title="@string/checkbox_title"
            android:summaryOn="@string/summary_on"
            android:summaryOff="@string/summary_off"/>

        <ListPreference
            android:title="@string/choice_list_title"
            android:key="@string/choice_list_key"
            android:entries="@array/list_items"
            android:entryValues="@array/list_items_values"
            android:defaultValue="@string/choice_list_default"/>

        <EditTextPreference
            android:defaultValue="@string/age_default"
            android:key="@string/age_key"
            android:title="@string/age_title" />

</PreferenceScreen>